@@ -853,12 +853,8 @@ GtkWidget *list_page() {
 	g_list_free(l);
 
 	vbox = gaim_gtk_make_frame (ret, _("Buddy Display"));
-	gaim_gtk_prefs_checkbox(_("Show buddy _icons"),
+	gaim_gtk_prefs_checkbox(_("Show more buddy details"),
 			"/gaim/gtk/blist/show_buddy_icons", vbox);
-	gaim_gtk_prefs_checkbox(_("Show _warning levels"),
-			"/gaim/gtk/blist/show_warning_level", vbox);
-	gaim_gtk_prefs_checkbox(_("Show idle _times"),
-			"/gaim/gtk/blist/show_idle_time", vbox);
 	gaim_gtk_prefs_checkbox(_("_Automatically expand contacts"),
 			"/gaim/gtk/blist/auto_expand_contacts", vbox);
 
