@@ -35,6 +35,8 @@ version 2.0.0
 	  background color.
 	* Removed "Raise Buddy List Window on Events" defaulted to "No"
 	* Removed "Display remote nicknames if no alias is set"
+	* Removed "Show idle times" and "Show warning levels" from the buddy list
+	  defaulted to "Yes".
 
 version 1.0.2 (10/19/2004):
 	Bug Fixes:
